add AEV menu, changed body text of about, change menu items of art menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,8 +138,11 @@ body {
 }
 
 .about .bio {
+    font-family: 'Inter', sans-serif;
     width: 60%;
     font-size: 18px;
+    font-weight: 100;
+    font-style: italic;
     line-height: 34px;
 }
 
