--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,10 @@ body {
     align-items: center;
 }
 
+.works a {
+    text-decoration: none;
+}
+
 .grid-element {
     width: 700px;
     min-width: 200px;
@@ -140,7 +144,7 @@ body {
 .about .bio {
     font-family: 'Inter', sans-serif;
     width: 60%;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 100;
     font-style: italic;
     line-height: 34px;
@@ -149,6 +153,73 @@ body {
 .about .bio p {
     margin-top: 0;
     margin-bottom: 10px;
+}
+
+.performances-container {
+    margin-top: 100px;
+}
+
+
+.performances {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.performances a {
+    text-decoration: none;
+}
+
+.performances .item {
+    width: 350px;
+    cursor: pointer;
+    height: 250px;
+}
+
+.performances .item h3 {
+    margin: 0;
+    position: relative;
+    bottom: 60px;
+    padding: 0 10px;
+    color: #fff;
+}
+
+.performances .item img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.vimeo-container{
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 60px;
+}
+
+.performances-container .description {
+    margin: 0 125px;
+}
+
+.performances-container .description h2 {
+    text-align: center;
+    font-style: normal;
+    font-size: 20px;
+}
+
+.performances-container .description .principal {
+    text-align: left;
+    font-style: italic;
+    width: 624px;
+    margin: 29px auto;
+    font-size: 16px;
+    line-height: 39px;
+
+}
+
+.performances-container .description .body {
+    text-align: left;
+    font-style: normal;
+    font-size: 16px;
 }
 
 
@@ -185,6 +256,16 @@ body {
     .about .info .portrait img {
         width: 200px;
     }
+
+    .performances {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .performances .item {
+        margin-bottom: 30px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1280px){
@@ -206,6 +287,19 @@ body {
     .about .bio {
         width: 80%;
         margin-top: 30px;
+    }
+
+    .performances .item {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1100px) {
+
+    .performances .item {
+        width: 33%;
+        height: 180px;
     }
 }
 
