added her performance page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -225,6 +225,14 @@ body {
 }
 
 
+.vimeo-container img {
+    color: transparent;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+
 /*Responsive*/
 
 @media screen and (max-width: 768px) {
