--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,16 @@ body {
     line-height: 34px;
 }
 
+.about .bioinfo {
+    font-family: 'Inter', sans-serif;
+    margin: 0 auto;
+    width: 67%;
+    font-size: 14px;
+    font-weight: 100;
+    font-style: italic;
+    line-height: 30px;
+}
+
 .about .bio p {
     margin-top: 0;
     margin-bottom: 10px;
@@ -280,6 +290,12 @@ body {
 
     .about .bio {
         width: 80%;
+    }
+
+    .about .bioinfo {
+        width: 50%;
+        text-align: left;
+        margin-bottom: 40px;
     }
 
     .about .info .portrait img {
